charts/nexus-hro/nexus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      #- image: sonatype/nexus3
      - image: tbd5d1uh.private-ncr.fin-ntruss.com/k8s/dev/devops/sonatype/nexus3
        name: nexus
        ports:
        - containerPort: 8081
        - containerPort: 5000
        volumeMounts:
        - mountPath: /nexus-data
          name: nexus-data-volume
      imagePullSecrets:
        - name: hero-reg
      volumes:
      - name: nexus-data-volume
        persistentVolumeClaim:
          claimName: nexus-pvc
